# MOV-Creator-API

./: CMakeLists.txt  README.md
include/MediaGaps/: IList.h
include/MediaGaps/Media/Quicktime/: QuicktimeWriter.h
include/MediaGaps/Memory/: BufferDataList.h
lib/: mg_Engine_r.lib  mg_IO_r.lib  mg_Memory_r.lib  mg_QuicktimeWriter_r.lib
src/: BufferDataImpl.cpp  BufferDataImpl.h  CMakeLists.txt  Helpers.cpp  Helpers.h  ISampleProviderWithDescriptor.h  MediaChunkSizeProviderImpl.cpp  MediaChunkSizeProviderImpl.h  MediaSampleImpl.cpp  MediaSampleImpl.h  ProResSampleProvider.cpp  ProResSampleProvider.h  WaveSampleProvider.cpp  WaveSampleProvider.h  main.cpp
